kubernetes/apps/oblivion/base/oblivion/ubuild.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuild
  namespace: oblivion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuild
  template:
    metadata:
      labels:
        app: ubuild
        ubuild: controller
    spec:
      serviceAccountName: ubuild
      restartPolicy: Always
      containers:
        - name: controller
          image: registry.registry.svc.cluster.local:5000/oblivion:main-03a606ae58e52406752ecf68766736165ada7824-1745791394.881139 # {"$imagepolicy": "flux-system:oblivion"}
          imagePullPolicy: IfNotPresent
          command:
            - python3
            - -m
            - oblivion
            - start
            - ubuild
---
apiVersion: v1
kind: Service
metadata:
  name: ubuild-service
  namespace: oblivion
spec:
  selector:
    app: ubuild
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubuild-ingress
  namespace: oblivion
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - secretName: wildcard-winwithcherwin-com
      hosts:
        - ubuild.staging.winwithcherwin.com
  rules:
    - host: ubuild.staging.winwithcherwin.com
      http:
        paths:
          - path: /webhook/github
            pathType: Prefix
            backend:
              service:
                name: ubuild-service
                port:
                  number: 80
